# TBO-Tree-Gen

./: .gitignore  .gitmodules  Makefile  Operators.py  PackageHandler.py  Panels.py  README.md  SConstruct  SpaceColonialization.py  TBO_Tree_Gen.py  TreeNodes.py  TreeObjects.py  TreeProperties.py  Utility.py  __init__.py
architectural_documentation/: mesh_generation_draft.md
cpp/: CMakeLists.txt  SConscript  TreeGenModule.cpp
cpp/implementation/: CMakeLists.txt  MeshGeneration.cpp  MeshGeneration.hpp  TreeNodes.hpp  Utility.cpp  Utility.hpp
cpp/src/: TreeNodes.cpp  Utility.cpp
cpp_extern/Splines/: spline.h
cpp_src/: MeshGeneration.cpp  MeshGeneration.h  TreeGenModule.cpp  TreeNode.cpp  TreeNodes.cpp  TreeNodes.h  Utility.cpp  Utility.h
py_src/: MeshGenration.py  Operators.py  PackageHandler.py  Panels.py  TreeNodes.py  TreeProperties.py  Utility.py
